src/test/ui/generator/resume-arg-late-bound.stderr
error: implementation of `Generator` is not general enough
  --> $DIR/resume-arg-late-bound.rs:15:5
   |
LL |     test(gen);
   |     ^^^^^^^^^ implementation of `Generator` is not general enough
   |
   = note: `[generator@$DIR/resume-arg-late-bound.rs:11:15: 11:31]` must implement `Generator<&'1 mut bool>`, for any lifetime `'1`...
   = note: ...but it actually implements `Generator<&'2 mut bool>`, for some specific lifetime `'2`

error: aborting due to previous error

